Blender+Tahiti+DRI3+Unity+Linux GUI corruption/not rendering #48946

Closed
opened 2016-07-26 08:41:30 +02:00 by d g · 10 comments

System Information
OS: Ubuntu 16.04 xenial
Kernel: x86_64 Linux 4.7.0-040700rc5-generic
Uptime: 5m
Packages: 2937
Shell: bash 4.3.46
Resolution: 1920x1080
DE: Unity 7.4.0
WM: Compiz
WM Theme: Ambiance
Ambiance [GTK2]
, Ambiance [GTK3]
Icon Theme: ubuntu-mono-dark
Font: Ubuntu 11
CPU: AMD Phenom II X4 965 @ 3.4GHz
GPU: Gallium 0.4 on AMD TAHITI (DRM 2.45.0 / 4.7.0-040700rc5-generic, LLVM 4.0.0)
RAM: 2129MiB / 16049MiB

  • =glxinfo output=-
    client glx vendor string: Mesa Project and SGI
    OpenGL core profile version string: 4.3 (Core Profile) Mesa 12.1.0-devel - padoka PPA
    OpenGL version string: 3.0 Mesa 12.1.0-devel - padoka PPA
    OpenGL ES profile version string: OpenGL ES 3.1 Mesa 12.1.0-devel - padoka PPA

Blender Version
Broken: 2.77a abf6f08
Also Broken but not limited to older version 2.60 r41226

Short description of error
When using blender parts of the GUI don't render

Here is a link to a video of the bug happening
https://youtu.be/tMs4QSW0OmY

I originally reported it to the mesa developers, and they have now directed me to report it here.
https://bugs.freedesktop.org/show_bug.cgi?id=97059

Exact steps for others to reproduce the error
Happens just by using blender and modifying the GUI. e.g.: https://youtu.be/tMs4QSW0OmY

How to make the problem stop happening
CTRL+ALT+U > System > Window Draw Method
Default is Automatic and if set to 'Triple Buffer' this issue goes away

**System Information** OS: Ubuntu 16.04 xenial Kernel: x86_64 Linux 4.7.0-040700rc5-generic Uptime: 5m Packages: 2937 Shell: bash 4.3.46 Resolution: 1920x1080 DE: Unity 7.4.0 WM: Compiz WM Theme: Ambiance Ambiance [GTK2] , Ambiance [GTK3] Icon Theme: ubuntu-mono-dark Font: Ubuntu 11 CPU: AMD Phenom II X4 965 @ 3.4GHz GPU: Gallium 0.4 on AMD TAHITI (DRM 2.45.0 / 4.7.0-040700rc5-generic, LLVM 4.0.0) RAM: 2129MiB / 16049MiB - =glxinfo output=- client glx vendor string: Mesa Project and SGI OpenGL core profile version string: 4.3 (Core Profile) Mesa 12.1.0-devel - padoka PPA OpenGL version string: 3.0 Mesa 12.1.0-devel - padoka PPA OpenGL ES profile version string: OpenGL ES 3.1 Mesa 12.1.0-devel - padoka PPA **Blender Version** Broken: 2.77a abf6f08 Also Broken but not limited to older version 2.60 r41226 **Short description of error** When using blender parts of the GUI don't render Here is a link to a video of the bug happening https://youtu.be/tMs4QSW0OmY I originally reported it to the mesa developers, and they have now directed me to report it here. https://bugs.freedesktop.org/show_bug.cgi?id=97059 **Exact steps for others to reproduce the error** Happens just by using blender and modifying the GUI. e.g.: https://youtu.be/tMs4QSW0OmY **How to make the problem stop happening** CTRL+ALT+U > System > Window Draw Method Default is Automatic and if set to 'Triple Buffer' this issue goes away
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @kurikai

Added subscriber: @kurikai

Added subscribers: @MikeErwin, @Sergey

Added subscribers: @MikeErwin, @Sergey
Mike Erwin was assigned by Sergey Sharybin 2016-07-26 13:12:58 +02:00

@MikeErwin, can you comment on this? There's some disucssion about GLX_EXT_buffer_age, GLX_OML_swap_method and GLX_INTEL_swap_event extension in the mesa bug report, which i'm not so familiar with.

@MikeErwin, can you comment on this? There's some disucssion about GLX_EXT_buffer_age, GLX_OML_swap_method and GLX_INTEL_swap_event extension in the mesa bug report, which i'm not so familiar with.

Added subscriber: @brecht

Added subscriber: @brecht

Probably we should remove the exception in wm_automatic_draw_method and just make the AMD open source drivers use triple buffer as well. The performance issue that this exception existed for is likely already fixed or only exists on GPUs that's we don't support anymore. That's difficult to verify of course, but perhaps we should just switch and see what happens.

For 2.8 I'd even like to remove all the other draw methods and keep only triple buffer. The overlap draw modes ideally should indeed check such extensions to figure out the swapping method used, but if we remove them anyway we won't need to.

Probably we should remove the exception in `wm_automatic_draw_method` and just make the AMD open source drivers use triple buffer as well. The performance issue that this exception existed for is likely already fixed or only exists on GPUs that's we don't support anymore. That's difficult to verify of course, but perhaps we should just switch and see what happens. For 2.8 I'd even like to remove all the other draw methods and keep only triple buffer. The overlap draw modes ideally should indeed check such extensions to figure out the swapping method used, but if we remove them anyway we won't need to.
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

I agree on getting rid of the other draw methods for 2.8. However, I think the full drawing would be useful to keep for debugging. Maybe as a comandline option, like --window-full-draw or using G.debug_value.

I agree on getting rid of the other draw methods for 2.8. However, I think the full drawing would be useful to keep for debugging. Maybe as a comandline option, like `--window-full-draw` or using `G.debug_value`.

This issue was referenced by e4646c52c0

This issue was referenced by e4646c52c04f87d0d914a4741bb64cf9de89118e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48946
No description provided.