Fix T48946: Blender+Tahiti+DRI3+Unity+Linux GUI corruption/not rendering

Enable triple buffer by default for AMD cards on opensource driver.

Should be safe now, since it was only old cards causing problems,
which we don't support now most likely anyway.